added class PongCubo

--- a/Juego_ping_pong/Juego_ping_pong.csproj
+++ b/Juego_ping_pong/Juego_ping_pong.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>Juego.cs</DependentUpon>
     </Compile>
     <Compile Include="PongBola.cs" />
+    <Compile Include="PongCubo.cs" />
     <Compile Include="PongOrigen.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
