--- a/Juego_ping_pong/Juego_ping_pong.csproj
+++ b/Juego_ping_pong/Juego_ping_pong.csproj
@@ -72,17 +72,11 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -103,6 +97,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\Debug\ball.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RacketLeft.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RacketRigth.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pelota.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
